# backtester

./: .dockerignore  .env.docker  .env.local  .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 644e26c223b7_initial_schema.py
api/: Dockerfile  dependencies.py  main.py
api/routes/: auth.py  data.py  datasets.py  rules.py  runs.py  simulation.py  users.py
app/application/: calendar_period_service.py  dataset_mapping.py  dataset_service.py  dataset_simulation_models.py  dataset_sweep_service.py  in_memory_dataset_loader.py  parameter_sweep_service.py  simulation_service.py  strategy_factory.py  walk_forward_service.py
app/auth/: security.py
app/core/: security.py  settings.py
app/data/: sample.csv  sample_ppi.csv
app/db/seeds/: seed_test_data.sql
app/ingestion/: csv_loader.py
app/models/: match.py  odds.py  user.py
app/schemas/: sweep.py  user.py
app/services/: csv_loader.py  parameter_sweep.py
app/simulation/: engine.py  models.py
backend/: Dockerfile
backend/app/: main.py
backend/tests/: test_simulation.py
docker/: api-entrypoint.sh
frontend/: package-lock.json  tsconfig.app.json
frontend/src/: App.jsx  App.tsx
research/: run_in_memory_csv.py  run_sweep.py
tests/: conftest.py  test_calendar_period_service.py  test_dataset_sweep_service.py  test_datasets_service.py  test_run_persistence_mock.py  test_runs_api.py  test_runs_export_api.py  test_simulation.py  test_walk_forward_service.py
worker/: Dockerfile  tasks.py
(+61 files in other folders)
